package com.user.UserMicroservice.model;

public enum Role {
    ADMIN,
    USER
}
